[gd_scene load_steps=6 format=3 uid="uid://fvvlvtgutkbj"]

[ext_resource type="Script" path="res://UI.gd" id="1_6b8of"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qamla"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6otkd"]
bg_color = Color(0.258824, 0.694118, 0.47451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvqky"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j30v2"]
bg_color = Color(1, 0.207843, 0.129412, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6b8of")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 1
layout_mode = 0
offset_left = 12.0
offset_top = 19.0
offset_right = 312.0
offset_bottom = 34.0
theme_override_styles/background = SubResource("StyleBoxEmpty_qamla")
theme_override_styles/fill = SubResource("StyleBoxFlat_6otkd")
value = 60.0
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_lvqky")
theme_override_styles/fill = SubResource("StyleBoxFlat_j30v2")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="HealthBar"]
wait_time = 0.4
one_shot = true

[node name="Prompt" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
uppercase = true

[node name="OrbCollectedLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 49.0
offset_right = 159.0
offset_bottom = 72.0
text = "Orbs Collected: 0/6"

[node name="TerminalsRestoredLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 80.0
offset_right = 171.0
offset_bottom = 103.0
text = "Terminals Restored: "

[node name="StartScreen" type="ColorRect" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.282353, 0.32549, 0.913725, 0.54902)

[node name="Title" type="Label" parent="StartScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -386.0
offset_top = 49.0
offset_right = 387.0
offset_bottom = 132.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Games Fleadh Game Thing"

[node name="Objective" type="Label" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Collect all the orbs and defeat the monsters"

[node name="Controls" type="Label" parent="StartScreen"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_vertical = 2
text = "Press Esc to Pause
Press Shift to place blocks 
with block orb
Click to punch"

[node name="Start" type="Button" parent="StartScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.653
anchor_right = 0.5
anchor_bottom = 0.653
offset_left = -25.0
offset_top = -14.144
offset_right = 25.0
offset_bottom = 16.856
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 41
text = "Start
"

[node name="Menu" type="ColorRect" parent="."]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.172549)

[node name="Close" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = 18.0
offset_right = -25.0
offset_bottom = 49.0
grow_horizontal = 0
text = "Close
"

[node name="RetryButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.408
anchor_top = 0.744
anchor_right = 0.408
anchor_bottom = 0.744
offset_left = -43.016
offset_top = -25.112
offset_right = 41.984
offset_bottom = 24.888
theme_override_font_sizes/font_size = 30
text = "Retry"

[node name="QuitBuuton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.603
anchor_top = 0.744
anchor_right = 0.603
anchor_bottom = 0.744
offset_left = -35.6561
offset_top = -25.112
offset_right = 35.3439
offset_bottom = 24.888
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="DeadText" type="Label" parent="Menu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.5
offset_top = -68.5
offset_right = 235.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "YOU DIED"

[node name="OrbPickUpRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 1, 0.109804, 0.356863)

[node name="PickUpText" type="Label" parent="OrbPickUpRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.5
offset_right = 98.5
offset_bottom = 42.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Orb Collected"

[node name="HitRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 329.0
offset_bottom = 54.0
color = Color(1, 0.329412, 0, 0.384314)

[connection signal="timeout" from="HealthBar/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartScreen/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Menu/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Menu/QuitBuuton" to="." method="_on_quit_buuton_pressed"]
